package org.serio.core.showcrawlerlogstorage;

import java.util.List;
import java.util.Optional;
import java.util.concurrent.Future;

/**
 * Storage for logs, generated by show crawlers.
 */
public interface ShowCrawlerLogStorage {
    /**
     * Get the log, that was generated the last time the specified show has been crawled.
     *
     * @param showId ID of the show
     * @return last crawling log of the specified show or an empty {@link Optional} if the specified show has not been
     * crawled yet.
     */
    Future<Optional<List<CrawlLogEntry>>> getLastCrawlingLogOfTheShow(String showId);

    /**
     * Save the specified crawling log in the storage, while binding it to the specified show.
     *
     * @param showId ID of the show
     * @param log crawling log
     */
    void saveCrawlingLogOfTheShow(String showId, List<CrawlLogEntry> log);
}
