@startuml
interface ShowStorage
interface WatchHistory
interface ShowCrawlerStorage
interface ShowCrawlerLogStorage
interface HttpClient
interface Clipboard
interface Notifications
interface UserInterface
[AndroidStorage] --|> WatchHistory
[AndroidStorage] --|> ShowStorage
[AndroidStorage] --|> ShowCrawlerStorage
[AndroidStorage] --|> ShowCrawlerLogStorage
[DesktopStorage] --|> WatchHistory
[DesktopStorage] --|> ShowStorage
[DesktopStorage] --|> ShowCrawlerStorage
[DesktopStorage] --|> ShowCrawlerLogStorage
[AndroidHttpClient] --|> HttpClient
[DesktopHttpClient] --|> HttpClient
[AndroidClipboard] --|> Clipboard
[DesktopClipboard] --|> Clipboard
[AndroidNotifications] --|> Notifications
[DesktopNotifications] --|> Notifications
[AndroidUserInterface] --|> UserInterface
[DesktopUserInterface] --|> UserInterface
[Shows] --> WatchHistory
[Shows] --> ShowStorage
[ShowsCrawler] --> ShowCrawlerStorage
[ShowsCrawler] --> HttpClient
[ShowsCrawler] --> ShowCrawlerLogStorage
[ShowsCrawler] --> [TaskExecutor]
[ShowPlayer] --> [Shows]
[ApplicationController] --> [Shows]
[ApplicationController] --> [ShowPlayer]
[ApplicationController] --> [ShowsCrawler]
[ApplicationController] --> Clipboard
[ApplicationController] --> Notifications
[ApplicationController] --> UserInterface
[ApplicationController] --> [TaskExecutor]
@enduml